--- a/index.html
+++ b/index.html
@@ -1,152 +1,344 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8"/>
+  <head>
+    <meta charset="UTF-8" />
     <meta
-            name="viewport"
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Delphin Aubin</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link
-            href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;900&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;900&display=swap"
+      rel="stylesheet"
     />
 
     <link
-            href="https://fonts.googleapis.com/css2?family=Sono:wght@200;300&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Sono:wght@200;300&display=swap"
+      rel="stylesheet"
     />
 
     <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-          rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-    <link href="style.css" rel="stylesheet"/>
-</head>
-<body>
-<header>
-    <img src="delphin.png" alt="Photo de Delphin Aubin"/>
-    <div>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <div class="header-image">
+        <img src="delphin.png" alt="Photo de Delphin Aubin" />
+      </div>
+      <div class="header-text">
         <h1>Hello I'm <span class="text-bg-primary">Delphin Aubin</span></h1>
         <h2 class="code">I'm senior fullstack engineer</h2>
-    </div>
-</header>
-<div class="content">
-    <p class="resume">
-        A <span class="bold">passionate software engineer</span> with <span class="bold">14 years of experience </span>, aspiring to
-        grow into a staff engineer role. Eager to share expertise, mentor
-        others, stay hands-on, and take on more challenging, high-impact
-        projects. Convinced that technology alone isn’t enough, I continuously
-        work on improving my soft skills to enhance team collaboration and
-        relationships. I'm also an <span class="bold">experienced speaker</span> loving sharing my knowledge.
-    </p>
-    <div class="experience">
-        <h1>
+      </div>
+    </header>
+    <main>
+      <div class="content">
+        <section class="resume">
+          A <span class="bold">passionate software engineer</span> with
+          <span class="bold">14 years of experience </span>, aspiring to grow
+          into a staff engineer role. Eager to share expertise, mentor others,
+          stay hands-on, and take on more challenging, high-impact projects.
+          Convinced that technology alone isn’t enough, I continuously work on
+          improving my soft skills to enhance team collaboration and
+          relationships. I'm also an
+          <span class="bold">experienced speaker</span> loving sharing my
+          knowledge.
+        </section>
+        <section class="experience">
+          <h1>
             Tech lead - Decathlon <i>(through Zenika)</i>
             <span class="date">Since end of 2023</span>
-        </h1>
-        <p>
-            Universal Membership Program (91 million users across 21 countries). I
-            worked in an international environment, using English daily 🇬🇧.
-        </p>
-        <h2>Team coaching</h2>
-        <p>Coached the team on development and testing best practices.</p>
-        <h2>Technical Debt Management</h2>
-        <p>
+          </h1>
+          <p>
+            During this experience I worked in an international environment,
+            using English daily 🇬🇧.
+          </p>
+          <h2>Universal membership program</h2>
+          <p>
+            This application is used by
+            <span class="bold">91 million users across 21 countries</span>.
+            <br />
+            I had the opportunity to do the following tasks
+          </p>
+          <h3>Team coaching</h3>
+          <p>Coached the team on development and testing best practices.</p>
+          <h3>Technical Debt Management</h3>
+          <p>
             Problem popularization to facilitate budget negotiations with
             stakeholders. Led the codebase rework using the Strangler pattern.
-        </p>
-        <h2>Reliability</h2>
-        <p>
-            Served as the SRE ambassador for our team: led the post-mortem process
-            and improved our monitoring practices. Eliminated a single point of
-            failure in our stack (the authentication token store) by implementing
-            a cryptographic solution to store tokens in the user's browser.
-        </p>
-        <h2>Build Tools Optimization</h2>
-        <p>
-            Improved build times by 600% to enhance developer experience (DX) and
-            team productivity by leveraging Vite/Vitest.
-        </p>
-    </div>
-    <div class="experience">
-        <h1>
+          </p>
+          <h3>Reliability</h3>
+          <p>
+            Served as the SRE ambassador for our team: led the post-mortem
+            process and improved our monitoring practices. Eliminated a single
+            point of failure in our stack (the authentication token store) by
+            implementing a cryptographic solution to store tokens in the user's
+            browser.
+          </p>
+          <h3>Build Tools Optimization</h3>
+          <p>
+            <span class="bold">Improved build times by 600%</span> to enhance
+            developer experience (DX) and team productivity by leveraging
+            Vite/Vitest.
+          </p>
+        </section>
+        <section class="experience">
+          <h1>
             Senior engineer - Adeo <i>(through Zenika)</i>
             <span class="date">2019 - 2023</span>
-        </h1>
-        <p>
+          </h1>
+          <p>
             During this experience, I worked on various components of Leroy
-            Merlin's e-commerce site, which was ranked Number 1 in web performance
-            among French e-commerce sites (ahead of Amazon and Google). We worked
-            using Extreme Programming (XP), with strong quality standards
-            including Behavior Driven Development (BDD), double loop TDD, Domain
-            Driven Design.
-        </p>
-        <h2>Knowledge Graph - Senior full stack engineer / Tech lead</h2>
-        <p class="note">
-            The purpose of the knowledge graph is to collect and organize product
-            data and the relationships between them in order to offer innovative
-            sales support tools.
-        </p>
-        <p>
+            Merlin's e-commerce site, which was ranked Number 1 in web
+            performance among French e-commerce sites (ahead of Amazon and
+            Google). We worked using Extreme Programming (XP), with strong
+            quality standards including
+            <span class="bold"
+              >Behavior Driven Development, double loop TDD, Domain Driven
+              Design.</span
+            >
+          </p>
+          <h2>Knowledge Graph - Senior full stack engineer / Tech lead</h2>
+          <p class="note">
+            The purpose of the knowledge graph is to collect and organize
+            product data and the relationships between them in order to offer
+            innovative sales support tools.
+          </p>
+          <p>
             Definition and implementation of an Event-Driven Architecture to
-            ensure complex computations while maintaining optimal performance. We
-            had 9 million nodes with 33 million relationships and were able to
-            handle 600 requests per second in less than 15 milliseconds each Our
-            best selling-tool achieved a 20% click-through rate (CTR)
-        </p>
-        <h2>Offer repository - Senior backend engineer / Tech lead</h2>
-        <p>
-            We started from scratch to build the Offer Repository (the cornerstone
-            of the Adeo marketplace). With tight deadlines (5 months), we had to
-            be agile and pragmatic to deliver the project on time. At the end of
-            the day, we were able to handle 1,000 requests per second in less than
-            10 milliseconds and over 2,000 updates per second
-        </p>
-    </div>
-    <div class="experience">
-        <h1>
-            Tech lead - Auchan Retail <i>(through Zenika)</i>
+            ensure complex computations while maintaining optimal performance.
+            We had <span class="bold">9 million nodes</span> with
+            <span class="bold">33 million relationships</span> and were able to
+            handle <span class="bold">600 requests per second</span> in less
+            than <span class="bold">15 milliseconds</span> each Our best
+            selling-tool achieved a 20% click-through rate (CTR)
+          </p>
+          <h2>Offer repository - Senior backend engineer / Tech lead</h2>
+          <p>
+            We started from scratch to build the Offer Repository (the
+            cornerstone of the Adeo marketplace). With tight deadlines :
+            <span class="bold">5 months</span>, we had to be agile and pragmatic
+            to deliver the project on time. At the end of the day, we were able
+            to handle
+            <span class="bold"
+              >1,000 requests per second in less than 10 milliseconds and over
+              2,000 updates per second</span
+            >
+          </p>
+        </section>
+        <section class="experience">
+          <h1>
+            Tech lead - Auchan Retail
             <span class="date">2018 - 2019</span>
-        </h1>
-        <p>
+          </h1>
+          <p>
             Application managing store commitments regarding the quantities of
             products to be supplied. Development of the first application on the
             new Auchan technical platform (Data-Centric architecture)
-            <br/>
-            <br/>
-            In addition to the traditional responsibilities of a tech lead, I also handled the following tasks:
-        <ul>
+            <br />
+            <br />
+            In addition to the traditional responsibilities of a tech lead, I
+            also handled the following tasks:
+          </p>
+          <ul>
             <li>Establishing the application architecture for the solution.</li>
-            <li>Setting up the foundational platform for future Auchan applications.</li>
-            <li>Implementing automated functional tests using Behavior Driven Development.</li>
-        </ul>
-        </p>
-    </div>
-    <div class="experience">
-        <h1>
+            <li>
+              Setting up the foundational platform for future Auchan
+              applications.
+            </li>
+            <li>
+              Implementing automated functional tests using Behavior Driven
+              Development.
+            </li>
+          </ul>
+        </section>
+        <section class="experience">
+          <h1>
             Developer - Sopra Steria
             <span class="date">2013 - 2019</span>
-        </h1>
-        <p>
-            This experience sharpened my software development skills, particularly in backend development with Java
-            stacks.
-            I gained exposure to a broad range of technologies from React, Vue, and Angular to COBOL, Java, PHP, and
-            Node.js
-            providing me with a well-rounded technical perspective. It was also during this time that I developed a
-            passion for software craftsmanship and agile methodologies.
-            On the business side, I had the opportunity to work with clients such as Société Générale, Mutuelle Sociale
-            Agricole, Immochan, and Auchan Retail France.
-        </p>
-    </div>
-</div>
-</body>
+          </h1>
+          <p>
+            This experience sharpened my software development skills,
+            particularly in backend development with Java stacks. I gained
+            exposure to a broad range of technologies from React, Vue, and
+            Angular to COBOL, Java, PHP, and Node.js providing me with a
+            well-rounded technical perspective. It was also during this time
+            that
+            <span class="bold"
+              >I developed a passion for software craftsmanship and agile
+              methodologies.</span
+            >
+            On the business side, I had the opportunity to work with clients
+            such as
+            <span class="bold"
+              >Société Générale, Mutuelle Sociale Agricole, Immochan, and Auchan
+              Retail France.</span
+            >
+          </p>
+        </section>
+      </div>
+      <div class="sidebar">
+        <section>
+          <h1>Talks</h1>
+          I had the opportunity to speak at various tech events:
+          <ul>
+            <li>
+              <span class="bold">BDXio 2024</span> (Bordeaux) 2024 - Les 10
+              minutes TS les plus rentables de votre vie
+            </li>
+            <li>
+              <span class="bold">Devfest Lille 2024</span> -
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://www.youtube.com/watch?v=qTS89fsmXzs"
+                >Les 10 minutes TS les plus rentables de votre vie</a
+              >
+            </li>
+            <li>
+              <span class="bold">Google Developer Group</span> (GDG) Lille -
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://www.youtube.com/watch?v=0v7zHnNbqfA"
+                >CQRS CQFD</a
+              >
+            </li>
+            <li>
+              <span class="bold">Touraine tech 2022</span> -
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://2022.touraine.tech/talk/g7uf2lkiVA3vFzv8vCSR"
+                >Game of Nodes ou comment fonctionnent les systèmes distribués
+                ?</a
+              >
+            </li>
+            <li>
+              <span class="bold">GDG Lille</span> -
+              <a
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://www.youtube.com/watch?v=NonGdjNfgUo&t=1168s"
+                >Mo Mo Mo Mo Modules</a
+              >
+            </li>
+            <li>
+              <span class="bold">Paris open source summit 2019</span> - Mo Mo Mo
+              Mo Modules
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h1>Side projects</h1>
+          <ul>
+            <li>
+              <span class="bold">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://1a10.app/"
+                  >1à10</a
+                ></span
+              >
+              : Quiz Mobile App which has been ranked in the top 20 of the Apple
+              Store quiz category for one month <b>20,000 downloads</b> (Android
+              + IOS).
+            </li>
+            <li>
+              <span class="bold">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://javro.github.io/"
+                  >Javro</a
+                ></span
+              >
+              : Tool to edit Avro schema
+            </li>
+
+            <li>
+              <span class="bold">
+                <a
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  href="https://github.com/cucumber-stories/cucumber-datatable"
+                  >Cucumber datatable</a
+                ></span
+              >
+              : Library to facilitate the use of cucumber tables
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h1>Trainer</h1>
+          I enjoy sharing my knowledge and have had the opportunity to train
+          others on the following topics:
+          <ul>
+            <li>Vue.js</li>
+            <li>Node.js</li>
+            <li>Advanced Javascript</li>
+            <li>TDD (Centrale Lille school)</li>
+          </ul>
+        </section>
+        <section>
+          <h1>Technologies</h1>
+          <h2>Languages</h2>
+          <ul>
+            <li>Javascript / Typescript</li>
+            <li>Java</li>
+          </ul>
+          <h2>Frontend</h2>
+          <ul>
+            <li>React</li>
+            <li>Angular</li>
+            <li>Vue.js</li>
+            <li>Svelte</li>
+          </ul>
+          <h2>Backend</h2>
+          <ul>
+            <li>Node.js</li>
+            <li>NestJS</li>
+            <li>Spring</li>
+            <li>Java EE</li>
+          </ul>
+          <h2>Tools</h2>
+          <ul>
+            <li>Kafka</li>
+            <li>MongoDB</li>
+            <li>PostgreSQL</li>
+            <li>Neo4j</li>
+            <li>Kubernetes</li>
+            <li>Docker</li>
+            <li>GCP</li>
+          </ul>
+        </section>
+        <section>
+          <h1>Education & Languages</h1>
+          <h2>Education</h2>
+          Engineering Degree from the École Nationale Supérieure des Mines de Saint-Étienne (2012)
+          <br/>
+          <br/>
+          <h2>Languages</h2>
+          French (native), English (nearly fluent)
+        </section>
+        <section>
+          <h1>Hobbies</h1>
+          Close up Magic, Mixology, Home Automation
+        </section>
+      </div>
+    </main>
+  </body>
 </html>
