feat: rework style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Sono:wght@200;300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sono:wght@200;400;500&display=swap"
       rel="stylesheet"
     />
 
@@ -37,6 +37,10 @@
     <header>
       <div class="header-image">
         <img src="delphin.png" alt="Photo de Delphin Aubin" />
+        <div class="contact">
+          <a href="tel:0682737268">06 82 73 72 68</a><br />
+          delphin.aubin@gmail.com
+        </div>
       </div>
       <div class="header-text">
         <h1>Hello I'm <span class="text-bg-primary">Delphin Aubin</span></h1>
@@ -53,8 +57,8 @@
           Convinced that technology alone isn’t enough, I continuously work on
           improving my soft skills to enhance team collaboration and
           relationships. I'm also an
-          <span class="bold">experienced speaker</span> loving sharing my
-          knowledge.
+          <span class="bold">experienced speaker</span> who enjoys sharing
+          knowledge with others.
         </section>
         <section class="experience">
           <h1>
@@ -70,7 +74,7 @@
             This application is used by
             <span class="bold">91 million users across 21 countries</span>.
             <br />
-            I had the opportunity to do the following tasks
+            I had the opportunity to do the following tasks:
           </p>
           <h3>Team coaching</h3>
           <p>Coached the team on development and testing best practices.</p>
@@ -93,6 +97,10 @@
             developer experience (DX) and team productivity by leveraging
             Vite/Vitest.
           </p>
+          <div class="technologies">
+            <h3>Technologies:</h3>
+            <span>Svelte - Node.js - Nest.js - Strapi</span>
+          </div>
         </section>
         <section class="experience">
           <h1>
@@ -101,7 +109,7 @@
           </h1>
           <p>
             During this experience, I worked on various components of Leroy
-            Merlin's e-commerce site, which was ranked Number 1 in web
+            Merlin's e-commerce site, which was ranked number 1 in web
             performance among French e-commerce sites (ahead of Amazon and
             Google). We worked using Extreme Programming (XP), with strong
             quality standards including
@@ -119,28 +127,37 @@
           <p>
             Definition and implementation of an Event-Driven Architecture to
             ensure complex computations while maintaining optimal performance.
-            We had <span class="bold">9 million nodes</span> with
-            <span class="bold">33 million relationships</span> and were able to
-            handle <span class="bold">600 requests per second</span> in less
-            than <span class="bold">15 milliseconds</span> each Our best
+            We had <span class="bold">9&nbsp;million nodes</span> with
+            <span class="bold">33&nbsp;million relationships</span> and were
+            able to handle
+            <span class="bold">600&nbsp;requests per second</span> in less than
+            <span class="bold">15&nbsp;milliseconds</span> each Our best
             selling-tool achieved a 20% click-through rate (CTR)
           </p>
+          <div class="technologies">
+            <h3>Technologies:</h3>
+            <span>Node.js - Nest.js - Kafka - Neo4j - MongoDB - Angular</span>
+          </div>
           <h2>Offer repository - Senior backend engineer / Tech lead</h2>
           <p>
             We started from scratch to build the Offer Repository (the
-            cornerstone of the Adeo marketplace). With tight deadlines :
-            <span class="bold">5 months</span>, we had to be agile and pragmatic
-            to deliver the project on time. At the end of the day, we were able
-            to handle
+            cornerstone of the Adeo marketplace). With tight
+            <span class="bold">deadlines : 5 months</span>, we had to be agile
+            and pragmatic to deliver the project on time. At the end of the day,
+            we were able to handle
             <span class="bold"
               >1,000 requests per second in less than 10 milliseconds and over
               2,000 updates per second</span
             >
           </p>
+          <div class="technologies">
+            <h3>Technologies:</h3>
+            <span>Node.js - Nest.js - Kafka - MongoDB</span>
+          </div>
         </section>
         <section class="experience">
           <h1>
-            Tech lead - Auchan Retail
+            Tech lead - Auchan Retail <i>(through Zenika)</i>
             <span class="date">2018 - 2019</span>
           </h1>
           <p>
@@ -163,6 +180,10 @@
               Development.
             </li>
           </ul>
+          <div class="technologies">
+            <h3>Technologies:</h3>
+            <span>Node.js - Vue.js</span>
+          </div>
         </section>
         <section class="experience">
           <h1>
@@ -195,7 +216,7 @@
           I had the opportunity to speak at various tech events:
           <ul>
             <li>
-              <span class="bold">BDXio 2024</span> (Bordeaux) 2024 - Les 10
+              <span class="bold">BDX I/O 2024</span> (Bordeaux) 2024 - Les 10
               minutes TS les plus rentables de votre vie
             </li>
             <li>
@@ -204,7 +225,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 href="https://www.youtube.com/watch?v=qTS89fsmXzs"
-                >Les 10 minutes TS les plus rentables de votre vie</a
+                >🎬 Les 10 minutes TS les plus rentables de votre vie</a
               >
             </li>
             <li>
@@ -213,7 +234,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 href="https://www.youtube.com/watch?v=0v7zHnNbqfA"
-                >CQRS CQFD</a
+                >🎬 CQRS CQFD</a
               >
             </li>
             <li>
@@ -232,7 +253,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 href="https://www.youtube.com/watch?v=NonGdjNfgUo&t=1168s"
-                >Mo Mo Mo Mo Modules</a
+                >🎬 Mo Mo Mo Mo Modules</a
               >
             </li>
             <li>
@@ -297,20 +318,20 @@
           <h1>Technologies</h1>
           <h2>Languages</h2>
           <ul>
-            <li>Javascript / Typescript</li>
+            <li>Javascript/Typescript 💚</li>
             <li>Java</li>
           </ul>
           <h2>Frontend</h2>
           <ul>
-            <li>React</li>
+            <li>React 💚</li>
             <li>Angular</li>
             <li>Vue.js</li>
             <li>Svelte</li>
           </ul>
           <h2>Backend</h2>
           <ul>
-            <li>Node.js</li>
-            <li>NestJS</li>
+            <li>Node.js 💚</li>
+            <li>NestJS 💚</li>
             <li>Spring</li>
             <li>Java EE</li>
           </ul>
@@ -324,19 +345,26 @@
             <li>Docker</li>
             <li>GCP</li>
           </ul>
+          <h2>Methodologies</h2>
+          <ul>
+            <li>TDD</li>
+            <li>BDD</li>
+            <li>DDD</li>
+          </ul>
         </section>
         <section>
           <h1>Education & Languages</h1>
-          <h2>Education</h2>
-          Engineering Degree from the École Nationale Supérieure des Mines de Saint-Étienne (2012)
-          <br/>
-          <br/>
-          <h2>Languages</h2>
+          <h2>Education 🎓</h2>
+          Engineering Degree from the École Nationale Supérieure des Mines de
+          Saint-Étienne (2012)
+          <br />
+          <br />
+          <h2>Languages 🇫🇷 🇬🇧</h2>
           French (native), English (nearly fluent)
         </section>
         <section>
           <h1>Hobbies</h1>
-          Close up Magic, Mixology, Home Automation
+          🪄&nbsp;Close up Magic -🍸&nbsp;Mixology - 🏠&nbsp;Home Automation.
         </section>
       </div>
     </main>
