feat: resize the image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
       <div class="hero">
         <div class="header-image">
-          <img src="delphin.png" alt="Photo de Delphin Aubin" />
+          <img src="delphin-800x600.png" alt="Photo de Delphin Aubin" />
         </div>
         <div class="header-text">
           <h1>Hello I'm <span class="text-bg-primary">Delphin Aubin</span></h1>
