--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         </div>
         <div class="header-text">
           <h1>Hello I'm <span class="text-bg-primary">Delphin Aubin</span></h1>
-          <h2 class="code">I'm senior fullstack engineer</h2>
+          <h2 class="code">Senior fullstack engineer</h2>
         </div>
       </div>
       <div class="contact">
-        <a href="tel:0682737268">06 82 73 72 68</a><br />
+        <a href="tel:0682737268">(+33) 6 82 73 72 68</a><br />
         delphin.aubin@gmail.com
       </div>
     </header>
